--- a/src/app/modules/admin/users/user-add-form/user-add-form.component.html
+++ b/src/app/modules/admin/users/user-add-form/user-add-form.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="flex justify-between items-center">
 		<h2 class="text-3xl font-semibold tracking-tight leading-8" style="margin: 0;">
-			{{ id ? 'Update User' : 'Add User'}}
+			{{ userId ? 'Update User' : 'Add User'}}
 		</h2>
 		
 		<button mat-icon-button matDialogClose>
@@ -85,7 +85,7 @@
 			</mat-form-field>
 		</div>
 
-		<div class="flex flex-col" *ngIf="!id">
+		<div class="flex flex-col" *ngIf="!userId">
 			<mat-form-field appearance="outline">
 				<mat-label>Password</mat-label>
 				<input type="password" matInput placeholder="Password" formControlName="password">
@@ -110,7 +110,7 @@
 	<div class="flex justify-end">
 		<button mat-raised-button color="primary" 
 			[disabled]="theForm.invalid || !theForm.dirty || disableSaveBtn" 
-			(click)="onSave()">{{ id ? 'Update' : 'Save' }}
+			(click)="onSave()">{{ userId ? 'Update' : 'Save' }}
 		</button>
 	</div>
 </div>
