--- a/src/app/modules/admin/tenders/tender-form/tender-document/tender-document.component.html
+++ b/src/app/modules/admin/tenders/tender-form/tender-document/tender-document.component.html
@@ -1,7 +1,7 @@
 <div class="document-slot" [class.mr-10]="key === 'document3'">
 	<div class="mb-2">{{ title }}</div>
 	<div *ngIf="documentValue; else uploadDoc" class="relative">
-		<img class="tender-doc" [src]="documentValue" alt="Tender document">
+		<img class="tender-doc" [src]="documentValue | filePreview" alt="Tender document">
 
 		<button mat-icon-button color="warn" class="btn-remove-tender-doc" (click)="onRemoveTenderDocument()">
 			<mat-icon>close</mat-icon>
