we can add different colors to table action buttons now

--- a/src/app/shared/components/generic-table/table.component.scss
+++ b/src/app/shared/components/generic-table/table.component.scss
@@ -105,6 +105,10 @@
 	.download-icon {
 		color: #4f46e5;
 	}
+
+	.delete-fg {
+		color: #dc2626 !important;
+	}	
 }
 
 ::ng-deep .mat-sort-header-stem {
