--- a/src/app/modules/auth/sign-in/sign-in.component.html
+++ b/src/app/modules/auth/sign-in/sign-in.component.html
@@ -2,8 +2,8 @@
     <div class="md:flex md:items-center md:justify-end w-full sm:w-auto md:h-full md:w-full py-8 px-4 sm:p-12 md:p-16 sm:rounded-2xl md:rounded-none sm:shadow md:shadow-none sm:bg-card">
         <div class="w-full max-w-80 sm:w-80 mx-auto">
             <!-- Logo -->
-            <div class="w-40 mx-auto">
-                <img src="assets/images/logo/logo.png">
+            <div class="w-40 mx-auto mb-4">
+                <img src="assets/images/logo_primary.png">
             </div>
 
             <!-- Title -->
