--- a/src/app/layout/layouts/horizontal/material/material.component.html
+++ b/src/app/layout/layouts/horizontal/material/material.component.html
@@ -15,7 +15,7 @@
             <div class="flex items-center h-20 pt-6 px-8">
                 <img
                     class="w-24"
-                    src="assets/images/logo/logo.png"
+                    src="assets/images/logo.svg"
                     alt="Logo image">
             </div>
         </ng-container>
@@ -36,12 +36,12 @@
                         <!-- Light version -->
                         <img
                             class="w-24 dark:hidden"
-                            src="assets/images/logo/logo.png"
+                            src="assets/images/logo_primary.png"
                             alt="Logo image">
                         <!-- Dark version -->
                         <img
                             class="hidden dark:flex w-24"
-                            src="assets/images/logo/logo.png"
+                            src="assets/images/logo_primary.png"
                             alt="Logo image">
                     </div>
                 </ng-container>
