--- a/src/app/layout/layouts/vertical/classic/classic.component.html
+++ b/src/app/layout/layouts/vertical/classic/classic.component.html
@@ -15,12 +15,12 @@
             <!-- Light version -->
             <img
                 class="dark:hidden w-12"
-                src="assets/images/logo/logo.png"
+                src="assets/images/logo.svg"
                 alt="Logo image">
             <!-- Dark version -->
             <img
                 class="hidden dark:flex w-12"
-                src="assets/images/logo/logo.png"
+                src="assets/images/logo.svg"
                 alt="Logo image">
         </div>
     </ng-container>
