--- a/src/app/layout/layouts/vertical/classy/classy.component.html
+++ b/src/app/layout/layouts/vertical/classy/classy.component.html
@@ -15,7 +15,7 @@
             <div class="flex items-center justify-center">
                 <img
                     class="w-12"
-                    src="assets/images/logo/logo.png">
+                    src="assets/images/logo.svg">
             </div>
             <!-- Components -->
             <div class="flex items-center ml-auto">
