--- a/src/app/modules/auth/sign-out/sign-out.component.html
+++ b/src/app/modules/auth/sign-out/sign-out.component.html
@@ -3,7 +3,7 @@
         <div class="w-full max-w-80 sm:w-80 mx-auto sm:mx-0">
             <!-- Logo -->
             <div class="w-24 mx-auto">
-                <img src="assets/images/logo/logo.png">
+                <img src="assets/images/logo_primary.png">
             </div>
 
             <!-- Title -->
