--- a/src/app/modules/admin/tenders/bidders-pricing/bidders-pricing.component.html
+++ b/src/app/modules/admin/tenders/bidders-pricing/bidders-pricing.component.html
@@ -40,7 +40,11 @@
 	
 						<ng-container matColumnDef="status">
 							<th mat-header-cell *matHeaderCellDef> Status </th>
-							<td mat-cell *matCellDef="let element"> {{element.status }} </td>
+							<td mat-cell *matCellDef="let element">
+								<div class="bid-status" [class]="element.status.toLowerCase()">
+									{{element.status | replaceUnderscore }}
+								</div>
+							</td>
 						</ng-container>
 	
 						<ng-container matColumnDef="loading">
