duration is in months

--- a/src/app/modules/admin/tenders/bidders-pricing/bidders-pricing.component.html
+++ b/src/app/modules/admin/tenders/bidders-pricing/bidders-pricing.component.html
@@ -29,7 +29,7 @@
 						</ng-container>
 	
 						<ng-container matColumnDef="duration">
-							<th mat-header-cell *matHeaderCellDef> Duration </th>
+							<th mat-header-cell *matHeaderCellDef> Duration (months) </th>
 							<td mat-cell *matCellDef="let element"> {{element.durationInNumbers }} </td>
 						</ng-container>
 	
