--- a/src/app/shared/components/generic-table/table.component.scss
+++ b/src/app/shared/components/generic-table/table.component.scss
@@ -123,12 +123,22 @@
 			background-color: #A5C7E7;
 		}
 
-		&.under_evaluation {
+		&.under-evaluation {
 			background-color: #FFEB99;
 		}
 
 		&.open {
 			background-color: #A8D5BA;
+		}
+
+		&.in-range {
+			color: #fff;
+			background-color: #28a745;
+		}
+
+		&.out-of-range {
+			color: #fff;
+			background-color: #dc3545;
 		}
 	}
 }
