--- a/src/app/shared/components/generic-table/table.component.scss
+++ b/src/app/shared/components/generic-table/table.component.scss
@@ -141,6 +141,13 @@
 			background-color: #dc3545;
 		}
 	}
+
+	.filter-icon {
+		position: absolute;
+		top: -8px;
+		right: -10px;
+		cursor: pointer;
+	}
 }
 
 ::ng-deep .mat-sort-header-stem {
