added binaa logo in bidders pricing table

--- a/src/app/modules/admin/tenders/bidders-pricing/bidders-pricing.component.scss
+++ b/src/app/modules/admin/tenders/bidders-pricing/bidders-pricing.component.scss
@@ -71,6 +71,13 @@
 			.out_of_range {
 				background-color: #dc3545;
 			}
+
+			img {
+				width: 50px;
+				height: 40px;
+				border-radius: 4px;
+				margin-right: 5px;
+			}
 		}
 
 		.paginator {
