--- a/src/app/modules/admin/tenders/bidders-pricing/bidders-pricing.component.html
+++ b/src/app/modules/admin/tenders/bidders-pricing/bidders-pricing.component.html
@@ -37,6 +37,11 @@
 							<th mat-header-cell *matHeaderCellDef> Price </th>
 							<td mat-cell *matCellDef="let element"> {{element.priceInNumbers }} </td>
 						</ng-container>
+
+						<ng-container matColumnDef="isVerifiedOnBinaa">
+							<th mat-header-cell *matHeaderCellDef> Binaa Verified</th>
+							<td mat-cell *matCellDef="let element"> <img [src]="logoURL" alt="" *ngIf="element?.user?.company?.isVerifiedOnBinaa"> </td>
+						</ng-container>
 	
 						<ng-container matColumnDef="status">
 							<th mat-header-cell *matHeaderCellDef> Status </th>
