--- a/src/app/modules/admin/tenders/bidders-pricing/bidders-pricing.component.html
+++ b/src/app/modules/admin/tenders/bidders-pricing/bidders-pricing.component.html
@@ -14,6 +14,10 @@
 						</button>
 					</div>
 			
+					<button mat-stroked-button (click)="exportToExcel()" class="mr-3">
+						<mat-icon>download</mat-icon>
+					</button>
+
 					<button mat-stroked-button (click)="getAllBids()">
 						<mat-icon>refresh</mat-icon>
 					</button>
