Change stage value

--- a/src/app/modules/admin/tenders/bidders-pricing/bidders-pricing.component.scss
+++ b/src/app/modules/admin/tenders/bidders-pricing/bidders-pricing.component.scss
@@ -84,10 +84,10 @@
 			border-radius: 4px;
 		}
 	
-		.search-field {
+		.stage-dropdown {
 			::ng-deep .mat-form-field-wrapper {
 				padding-bottom: 0 !important;
-				margin: 0;
+				margin: 8px 0;
 			}
 		}
 	}
