--- a/src/app/modules/admin/tenders/bidders-pricing/bidders-pricing.component.html
+++ b/src/app/modules/admin/tenders/bidders-pricing/bidders-pricing.component.html
@@ -44,7 +44,21 @@
 
 						<ng-container matColumnDef="stage">
 							<th mat-header-cell *matHeaderCellDef> Stage </th>
-							<td mat-cell *matCellDef="let element"> {{element.stage }} </td>
+							<td mat-cell *matCellDef="let element">
+								<mat-form-field appearance="outline" class="w-40 stage-dropdown">
+									<mat-select
+										placeholder="Select"
+										[value]="element.stage || ''" 
+										(selectionChange)="onStageChange(element, $event.value)"
+										(click)="$event.stopPropagation()"
+									>
+										<mat-option value="">None</mat-option>
+										<mat-option value="Technical Meeting">Technical Meeting</mat-option>
+										<mat-option value="Site Visit">Site Visit</mat-option>
+										<mat-option value="Shortlisted">Shortlisted</mat-option>
+									</mat-select>
+								</mat-form-field>
+							</td>
 						</ng-container>
 
 						<ng-container matColumnDef="isVerifiedOnBinaa">
