--- a/src/app/modules/admin/tenders/bidders-pricing/bidders-pricing.component.html
+++ b/src/app/modules/admin/tenders/bidders-pricing/bidders-pricing.component.html
@@ -67,7 +67,22 @@
 						</ng-container>
 	
 						<ng-container matColumnDef="status">
-							<th mat-header-cell *matHeaderCellDef> Status </th>
+							<th mat-header-cell *matHeaderCellDef>
+								<span class="relative">
+									<span class="mr-4">Status</span>
+
+									<mat-icon (click)="toggleRangeFilter = !toggleRangeFilter" 
+											class="filter-icon"
+											color="primary">
+										{{ rangeFilterOptions.selectedFilterValue ? 'filter_alt' : 'filter_list' }}
+									</mat-icon>
+								</span>
+
+								<table-filters *ngIf="toggleRangeFilter"
+									[config]="rangeFilterOptions"
+									(signal)="onFilter($event)">
+								</table-filters>
+							</th>
 							<td mat-cell *matCellDef="let element">
 								<div class="bid-status" [class]="element.status.toLowerCase()">
 									{{element.status | replaceUnderscore }}
