--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,3 +2,9 @@
 /*  @ Import/write your custom styles here.
 /*  @ Styles from this file will override 'vendors.scss' and Fuse's base styles.
 /* ----------------------------------------------------------------------------------------------------- */
+.filter-icon {
+  position: absolute;
+  top: -8px;
+  right: -10px;
+  cursor: pointer;
+}
