--- a/src/app/modules/admin/tenders/bidders-pricing/bidders-pricing.component.html
+++ b/src/app/modules/admin/tenders/bidders-pricing/bidders-pricing.component.html
@@ -4,6 +4,12 @@
 			<div class="table-main-header">
 				<div class="title-section flex items-center">
 					<h2 class="text-3xl font-semibold tracking-tight leading-8 mr-3"> Bidders Pricing </h2>
+
+					<div class="search-field flex-1">
+						<mat-form-field class="flex-1">
+							<input type="text" placeholder="Search by Company" matInput [formControl]="searchFC">
+						</mat-form-field>
+					</div>
 				</div>
 	
 				<div class="flex flex-1 justify-end">
