--- a/src/app/modules/admin/tenders/bidders-pricing/bidders-pricing.component.html
+++ b/src/app/modules/admin/tenders/bidders-pricing/bidders-pricing.component.html
@@ -49,7 +49,22 @@
 						</ng-container>
 
 						<ng-container matColumnDef="stage">
-							<th mat-header-cell *matHeaderCellDef> Stage </th>
+							<th mat-header-cell *matHeaderCellDef>
+								<span class="relative">
+									<span class="mr-4">Stage</span>
+
+									<mat-icon (click)="toggleStageFilter = !toggleStageFilter" 
+											class="filter-icon"
+											color="primary">
+										{{ stageFilterOptions.selectedFilterValue ? 'filter_alt' : 'filter_list' }}
+									</mat-icon>
+								</span>
+
+								<table-filters *ngIf="toggleStageFilter"
+									[config]="stageFilterOptions"
+									(signal)="onFilter($event, 'stage')">
+								</table-filters>
+							</th>
 							<td mat-cell *matCellDef="let element">
 								<mat-form-field appearance="outline" class="w-40 stage-dropdown">
 									<mat-select
@@ -59,9 +74,10 @@
 										(click)="$event.stopPropagation()"
 									>
 										<mat-option value="">None</mat-option>
-										<mat-option value="Technical Meeting">Technical Meeting</mat-option>
-										<mat-option value="Site Visit">Site Visit</mat-option>
-										<mat-option value="Shortlisted">Shortlisted</mat-option>
+										<mat-option 
+											*ngFor="let option of stageFilterOptions.options" 
+											[value]="option">{{ option }}
+										</mat-option>
 									</mat-select>
 								</mat-form-field>
 							</td>
@@ -69,7 +85,12 @@
 
 						<ng-container matColumnDef="isVerifiedOnBinaa">
 							<th mat-header-cell *matHeaderCellDef> Binaa Verified</th>
-							<td mat-cell *matCellDef="let element"> <img [src]="'/assets/images/binaa_logo.png'" alt="Binaa Verified" *ngIf="element?.user?.company?.isVerifiedOnBinaa"> </td>
+							<td mat-cell *matCellDef="let element">
+								<img 
+									[src]="'/assets/images/binaa_logo.png'" 
+									alt="Binaa Verified" 
+									*ngIf="element?.user?.company?.isVerifiedOnBinaa">
+							</td>
 						</ng-container>
 	
 						<ng-container matColumnDef="status">
@@ -89,6 +110,7 @@
 									(signal)="onFilter($event)">
 								</table-filters>
 							</th>
+
 							<td mat-cell *matCellDef="let element">
 								<div class="bid-status" [class]="element.status.toLowerCase()">
 									{{element.status | replaceUnderscore }}
