--- a/src/app/modules/admin/tenders/bidders-pricing/bidders-pricing.component.scss
+++ b/src/app/modules/admin/tenders/bidders-pricing/bidders-pricing.component.scss
@@ -90,5 +90,14 @@
 				margin: 8px 0;
 			}
 		}
+
+		.sortable {
+			cursor: pointer;
+		}
+
+		.sort-icon {
+			font-size: 18px;
+			margin-left: 2px;
+		}
 	}
 }
